--- a/Pitch Perfect/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Pitch Perfect/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Pitch_Perfect" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,12 +15,87 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FGT-zq-5lU">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="microphone"/>
+                                <variation key="widthClass=compact"/>
+                                <connections>
+                                    <action selector="recordAudio:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="F87-NU-ure"/>
+                                </connections>
+                            </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MUx-Qx-Jlg">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="stop-2"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="165" y="484" width="70" height="70"/>
+                                </variation>
+                                <connections>
+                                    <action selector="stopRecording:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="IPf-Al-vyq"/>
+                                </connections>
+                            </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="recording..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2qf-a1-RGy">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" name="STHeitiSC-Light" family="Heiti SC" pointSize="14"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="164" y="436" width="73" height="21"/>
+                                </variation>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="FGT-zq-5lU" secondAttribute="centerY" id="3HE-Li-5i5"/>
+                            <constraint firstItem="2qf-a1-RGy" firstAttribute="top" secondItem="FGT-zq-5lU" secondAttribute="bottom" constant="8" id="A4N-xd-3AE"/>
+                            <constraint firstAttribute="centerX" secondItem="MUx-Qx-Jlg" secondAttribute="centerX" id="YN2-70-Mt7"/>
+                            <constraint firstItem="2qf-a1-RGy" firstAttribute="centerX" secondItem="FGT-zq-5lU" secondAttribute="centerX" constant="0.5" id="f1H-Gc-QFd"/>
+                            <constraint firstItem="MUx-Qx-Jlg" firstAttribute="top" secondItem="2qf-a1-RGy" secondAttribute="bottom" constant="30" id="kni-Vg-phO"/>
+                            <constraint firstAttribute="centerX" secondItem="FGT-zq-5lU" secondAttribute="centerX" id="v7W-gH-4n4"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="FGT-zq-5lU"/>
+                                <exclude reference="MUx-Qx-Jlg"/>
+                                <exclude reference="2qf-a1-RGy"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="3HE-Li-5i5"/>
+                                <exclude reference="v7W-gH-4n4"/>
+                                <exclude reference="A4N-xd-3AE"/>
+                                <exclude reference="f1H-Gc-QFd"/>
+                                <exclude reference="YN2-70-Mt7"/>
+                                <exclude reference="kni-Vg-phO"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="FGT-zq-5lU"/>
+                                <include reference="MUx-Qx-Jlg"/>
+                                <include reference="2qf-a1-RGy"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="3HE-Li-5i5"/>
+                                <include reference="v7W-gH-4n4"/>
+                                <include reference="A4N-xd-3AE"/>
+                                <include reference="f1H-Gc-QFd"/>
+                                <include reference="YN2-70-Mt7"/>
+                                <include reference="kni-Vg-phO"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="recordingInProgress" destination="2qf-a1-RGy" id="fFh-Pl-x9p"/>
+                        <outlet property="stopRecordingButton" destination="MUx-Qx-Jlg" id="1i6-kz-Kbg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-68" y="-117"/>
+            <point key="canvasLocation" x="-339" y="-103"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="microphone" width="256" height="256"/>
+        <image name="stop-2" width="16" height="16"/>
+    </resources>
 </document>
